# gpt4-turbo-minipupper2-ros2-humble

./: README.md  dependencies_install.sh  install.sh
gpt4_ros/: package.xml  setup.cfg  setup.py
gpt4_ros/gpt4_ros/: gpt_config.py  gpt_ros2_client.py  gpt_ros2_server.py
gpt_audio/: package.xml  readme.md  setup.cfg  setup.py
gpt_audio/gpt_audio/: audio_input.py  audio_output.py
gpt_bringup/: package.xml  readme.md  setup.cfg  setup.py
gpt_bringup/launch/: gpt_bringup_launch.py
gpt_interfaces/: CMakeLists.txt  package.xml
gpt_main/: package.xml  readme.md  setup.cfg  setup.py
gpt_main/gpt_main/: gpt_ros2_client_demo.py  gpt_ros2_server_demo.py  gpt_service.py
gpt_robot/: package.xml  readme.md  setup.cfg  setup.py
gpt_robot/gpt_robot/: gpt_robot.py
gpt_status/: package.xml  setup.cfg  setup.py
gpt_status/gpt_status/: gpt_config.py  gpt_param_server.py
