<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpt_audio</name>
  <version>0.0.1</version>
  <description>The audio management package for GPT applications, including audio input and output processing, processing loops, etc.</description>
  <maintainer email="hermanye233@icloud.com">Herman Ye</maintainer>
  <license>Apache-2.0</license>

  <depend>gpt_status</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
